--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,8 +94,9 @@ a {
 }
 
 .img-wrap img{
-  min-width: 80%;
-  min-height: 80%;
+  /* min-width: 80%;
+  min-height: 80%; */
+  height: 180px;
   padding: 1.5rem;
   border-radius: 10px;
 
@@ -105,3 +106,7 @@ a {
   font-size: 36px;
 }
 
+.card-description {
+  font-size: 14px;
+  padding: 10px 20px 10px 20px;
+}
